almost done, encountered wire setTimeout problme

--- a/style.css
+++ b/style.css
@@ -1,9 +1,103 @@
 :root {
---bg-color: #222;
+  --bg-color: #222;
+  --g3: rgb(230, 142, 10);
+  --g2: rgb(0, 153, 255);
+  --g1: rebeccapurple;
+}
+
+@keyframes background-pan {
+  from {
+    background-position: 0% center;
+  }
+
+  to {
+    background-position: 200% center;
+  }
+}
+
+@keyframes scale {
+  from,
+  to {
+    transform: scale(0);
+  }
+
+  50% {
+    transform: scale(4);
+  }
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(180deg);
+  }
 }
 
 body {
   margin: 0px;
   padding: 0px;
-  
+  background-color: var(--bg-color);
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+}
+
+h1 {
+  color: white;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: clamp(2em, 2vw, 4em);
+  font-weight: 400;
+  margin: 0;
+  padding: 20px;
+  text-align: center;
+}
+
+h1 > .magic {
+  display: inline-block;
+  position: relative;
+}
+
+h1 > .magic > .magic-star {
+  --size: clamp(20px, 1.5vw, 30px);
+  display: block;
+  position: absolute;
+  width: var(--size);
+  height: var(--size);
+  left: var(--star-left);
+  top: var(--star-top);
+
+  animation: scale 700ms ease forwards;
+}
+
+h1 > .magic > .magic-star > svg {
+  display: block;
+  opacity: 0.7;
+  animation: rotate 1000ms linear infinite;
+}
+
+h1 > .magic > .magic-star > svg > path {
+  fill: var(--g1);
+}
+
+/* h1 > .magic > .magic-star > svg > path {
+  fill: white;
+} */
+
+h1 > .magic > .magic-text {
+  background: linear-gradient(
+    to right,
+    var(--g1),
+    var(--g2),
+    var(--g3),
+    var(--g1)
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  white-space: nowrap;
+  background-size: 200%;
+  animation: background-pan 3s linear infinite;
 }
